# pymongoose

./: .gitignore  CHANGELOG.md  Dockerfile.test  README.md  path.sh  pymongoose-snippets.json  requirements.txt  run.sh  setup.cfg  setup.py  test.sh
.github/workflows/: release.yml  test.yml
examples/: nested_agreggation.py
examples/models/: user.py
pymongoose/: __init__.py  logger.py  methods.py  mongo_types.py  version.py
tests/: test.py
tests/models/: complex_model.py  role.py  user.py
