[metadata]
name = pymongoose
version = 1.3.1
author = Juan Carlos Lara
author_email = jlaraanaya@gmail.com
description = A pymongo helper with methods and classes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djcharles26/pymongoose
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent 
[options]
packages= find:
python_requires= >=3.8
install_requires = 
    pymongo